
syntax = "proto3";

package qrtz_simprop_triggers;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";



message QrtzSimpropTriggerBean {

    string sched_name=1;
    string trigger_name=2;
    string trigger_group=3;
    optional string str_prop_1=4;
    optional string str_prop_2=5;
    optional string str_prop_3=6;
    optional int32 int_prop_1=7;
    optional int32 int_prop_2=8;
    optional int64 long_prop_1=9;
    optional int64 long_prop_2=10;
    optional string dec_prop_1=11;
    optional string  dec_prop_2=12;
    bool bool_prop_1=13;
    bool bool_prop_2=14;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzSimpropTriggerBeanService {
  rpc ListQrtzSimpropTriggerBeans(ListQrtzSimpropTriggerBeansRequest) returns (ListQrtzSimpropTriggerBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzSimpropTriggerBeans"
    };
  }

  rpc GetQrtzSimpropTriggerBean(GetQrtzSimpropTriggerBeanRequest) returns (QrtzSimpropTriggerBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzSimpropTriggerBeans/*}"
    };
  }

  rpc CreateQrtzSimpropTriggerBean(CreateQrtzSimpropTriggerBeanRequest) returns (QrtzSimpropTriggerBean) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzSimpropTriggerBeans"
      body: "QrtzSimpropTriggerBean"
    };
  }

  rpc UpdateQrtzSimpropTriggerBean(UpdateQrtzSimpropTriggerBeanRequest) returns (QrtzSimpropTriggerBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzSimpropTriggerBean.name=QrtzSimpropTriggerBeans/*}"
      body: "QrtzSimpropTriggerBean"
    };
  }

  rpc DeleteQrtzSimpropTriggerBean(DeleteQrtzSimpropTriggerBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzSimpropTriggerBeans/*}"
    };
  }
}

// message QrtzSimpropTriggerBean {
// ! This should be defined elsewhere
// }

message ListQrtzSimpropTriggerBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListQrtzSimpropTriggerBeansResponse {
  // The field name should match the noun "QrtzSimpropTriggerBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzSimpropTriggerBean QrtzSimpropTriggerBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzSimpropTriggerBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzSimpropTriggerBeanRequest {
  // The parent resource name where the QrtzSimpropTriggerBean is to be created.
  string parent = 1;

  // The QrtzSimpropTriggerBean id to use for this QrtzSimpropTriggerBean.
  string QrtzSimpropTriggerBean_id = 2;

  // The QrtzSimpropTriggerBean resource to create.
  // The field name should match the Noun in the method name.
  QrtzSimpropTriggerBean QrtzSimpropTriggerBean = 3;
}

message UpdateQrtzSimpropTriggerBeanRequest {
  // The QrtzSimpropTriggerBean resource which replaces the resource on the server.
  QrtzSimpropTriggerBean QrtzSimpropTriggerBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzSimpropTriggerBeanRequest {
  // The resource name of the QrtzSimpropTriggerBean to be deleted.
  string name = 1;
}
